<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yogdaan</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8657920857471834/6724926610</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-8657920857471834/7271721521</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    //VolunteerPage
    <string name="Name">Name</string>
    <string name="Date_Of_Birth">Date Of Birth</string>
    <string name="Type_Of_Work">Type Of Work</string>
    <string name="Occupation">Occupation</string>
    <string name="Address">Address</string>
    <string name="Submit">Submit</string>

    //AddPostPage
    <string name="Add_Some_Description">Add Some Description</string>

    //DonatePage


    //HelpPage
    <string name="Select_Problem">Select Problem</string>


    <string name="Verify_Your_Number">Verify Your Number</string>
    <string name="Please_Enter_Your_Phone_Number_For_Verification">Please Enter Your Phone Number For Verification</string>
    <string name="Your_Phone_Number">Your Phone Number</string>
    <string name="Generate_OTP">Generate OTP</string>


    <string name="Donate">Donate</string>

    <string name="Our_Work">Our Work</string>
    <string name="Our_Helpers">Our Helpers</string>
    <string name="Volunteers">Volunteer</string>
    <string name="More">More</string>


    <string name="Enter_OTP">Enter OTP</string>
    <string name="Resend_OTP">Resend OTP</string>
    <string name="Verify_OTP">Verify OTP</string>
    <string name="We_Have_Sent_You_An_OTP_For_Phone_Number_Verification">We Have Sent You An OTP \n For Phone Number Verification</string>


    <string name="Amount">Amount</string>
    <string name="Donate_Now">Donate Now</string>

    <string name="Net_Credit">Net Credit</string>
    <string name="Net_Value">Net Value</string>


    <string name="Description">Description</string>

    <string name="there_is_a_free_platform_for_everyone_and_always_will_be_just_select_the_problem_and_we_will_do_or_best_to_sort_it_out">There is a free platform for everyone and always will be just select the problem and we will do or best to sort it out</string>
    <string name="need_help_for_others">Need help for others</string>
    <string name="need_help_for_yourself">Need Help for yourself</string>
    <string name="enter_information">Enter Information</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="or_give_address_below">Or give address below</string>
    <string name="please_add_any_government_id_proof_like_aadhar_card_pan_card_voter_id_driving_liscence_rashan_card">Please add any government id proof like aadhar card,pan card,voter id,driving liscence,rashan card.</string>
    <string name="use_camera">Use camera</string>
    <string name="select_type_of_help">Select Type Of Help :</string>
    <string name="the_best_way_to_persue_happiness_is_to_help_others">The best way to persue happiness is to help others!</string>
    <string name="need_help">Need Help</string>
    <string name="donate_money">Donate Money</string>

    <string name="donate_by_watching_ads">Donate by watching ads</string>
    <string name="select_the_money_range">Select the Money Range</string>
    <string name="stationary_money">Stationary Money</string>
    <string name="books_money">Books Money</string>
    <string name="food_money">Food Money</string>
    <string name="money_directly">Money Directly</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="username">username</string>
    <string name="a_step_towards_humanity">A step towards Humanity...</string>
    <string name="submitted_sucessfully">Submitted Sucessfully</string>
    <string name="thankyou_for_putting_your_request_on_our_app">Thankyou for putting your request on our app.</string>
    <string name="Select_problem">Select problem</string>
    <string name="Education">Education</string>
    <string name="Food">Food</string>
    <string name="Medical_faciilities">Medical faciltites</string>
    <string name="Need_blood">Need Blood</string>
    <string name="clothing">clothing</string>
    <string name="NeedMoney">Need Money</string>
    <string name="Housing">Housing</string>
    <string name="Dalitup">Dalit Upliftment</string>
    <string name="biotechnology">Biotechnology</string>
    <string name="Diffrentabledperson">Differently abled Person</string>
    <string name="Oldpeople">Old people</string>
    <string name="Humanrights">Human Rights</string>
    <string name="Informationtech">Information Technology</string>
    <string name="Agriculture">Agriculture</string>
    <string name="Waterresourcemanagement" tools:ignore="MissingTranslation">Water Resource Management</string>
    <string name="childdevelopment">Child Development</string>
    <string name="consumerrights">Consumer Rights</string>
    <string name="awarenessofinsurance">Awareness of Insurance</string>
    <string name="enterpreneurship">Enterpreneurship Community</string>
    <string name="cooperativeandresourcebuilding">cooperative and Resource Building</string>
    <string name="humanwelfare">human Welfare</string>
    <string name="waterandsaniatation">\"Water and Sanitation \"</string>
    <string name="Egovernance">E-governance</string>
    <string name="eleraning">E-learning</string>
    <string name="communitydevelopment">Community Development</string>
    <string name="environmentandforests">Environment and Forests</string>
    <string name="vocationaltraining">Vocational Training</string>
    <string name="disastermanagement">Disaster Management</string>
    <string name="healthandfamilywelfare">Health And Family Welfare</string>
    <string name="landresource">Land Resource</string>
    <string name="labourandemployment">Labour and Employment</string>
    <string name="hiv">HIV/Aids</string>
    <string name="foodprocessing">Food Processing</string>
    <string name="drinkingwater">Drinking Water</string>
    <string name="youthaffairs">Youth Affairs</string>
    <string name="artandculture"><![CDATA[Art & culture]]></string>
    <string name="waterresuorce">Water resource</string>
    <string name="womenandem">Women\'s Development and Empowerment</string>
    <string name="tourism">Tourism</string>
    <string name="urbandevelopment"><![CDATA[Urban Development & Poverty Alleviation]]></string>
    <string name="sports">Sports</string>
    <string name="scientistsandindustrialresaerch">Scientific and Industrial Research</string>
    <string name="scienceandtechnology">Science and Technology</string>
    <string name="ruraldevelopment"><![CDATA[Rural Development & Poverty Alleviation]]></string>
    <string name="righttoinformationandadvoccay">Right to Information and Advocacy</string>
    <string name="prisionerissues">Prisioner\'s issues</string>
    <string name="panchaytiraj">Panchayati Raj</string>
    <string name="nutition">Nutrition</string>
    <string name="newrenwavle">New and Renewable Energy</string>
    <string name="minorityissues">Minority issues</string>
    <string name="micro">Micro Small and Minor Enterprises</string>
    <string name="microfinnce">Micro Finance (SHGs)</string>
    <string name="landresuorce">Land Resource</string>
    <string name="legalawareness">Legal Awareness and AID</string>
    <string name="tribalaffairs">Tribal affairs</string>
    <string name="animalhusbandry">Animals Husbandry,Dairying,Fisheries</string>
    <string name="socialdeveopment">Social Development</string>
    <string name="civicissues">Civic issues</string>
    <string name="Marriageofdeprivedgirls">Marriage of deprived girls</string>
    <string name="sustainabledevelopment">Sustainable Development</string>
    <string name="satate">State budget analysis in perspective of poor</string>
    <string name="we_can_t_help_everyone_but_everyone_can_help_someone">We can\'t help everyone but... everyone can help someone</string>
    <string name="if_the_money_we_donate_helps_one_child_or_can_ease_the_pain_of_one_parent_those_funds_are_well_spent">\'If the money we donate helps one child or can ease the pain of one parent,Those funds are well spent.\'</string>

</resources>
