<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.
    com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PaymentSuggestion"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:background="#000000"
            android:id="@+id/ll1"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_the_money_range"
                android:textColor="#3C9E94"
                android:textSize="26sp"
                android:padding="8dp"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll1"
            android:layout_marginTop="30dp"
            android:id="@+id/ll2"

            >
            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="15dp"
                android:text="Lorem Ipsum is simply dumm Lor took a galley of type and scrambled it to make a type specimen book"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ll2"
            android:layout_marginTop="55dp">

            <LinearLayout
                android:id="@+id/stationary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pen2" />

                <TextView
                    android:id="@+id/stationarymoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:text="@string/stationary_money"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:text="10-12"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/rs" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/books"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/book" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:text="@string/books_money"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/bookmoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:text="50-100"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/rs" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/food_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/food" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:text="@string/food_money"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/foodmoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="20dp"
                    android:text="100-150"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/rs" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/moenydirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="22dp"
                    android:src="@drawable/pen2" />

                <TextView
                    android:id="@+id/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"

                    android:layout_marginLeft="5dp"
                    android:text="@string/money_directly"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="4dp"
                    android:src="@drawable/rs" />

            </LinearLayout>



        </LinearLayout>

    </RelativeLayout>


</ScrollView>