<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Volunteer"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="1"
            android:background="@drawable/text_input_bg"

            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"

            >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:text="Yogdaan"
                android:textColor="#ffffff"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="19dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:text="The best way to persue happiness is to help others!"
                android:textColor="#FFFFFF"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="2"

            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lv1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/text_input_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="Orientation">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/lv1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/volunteer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"

                    android:layout_marginRight="40dp"

                    app:cardBackgroundColor=" #FFFFFF"


                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:elevation="50dp"
                        android:padding="12dp"


                        >

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/text_background"
                            android:gravity="center"
                            android:hint="@string/Name"
                            android:textColorHint="#000000" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/volunteer_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/volunteer_name"
                    android:layout_marginLeft="40dp"

                    android:layout_marginRight="40dp"
                    app:cardBackgroundColor="#FFFFFF">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:elevation="50dp"
                        android:padding="12dp"

                        >

                        <EditText

                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/text_background"
                            android:gravity="center"
                            android:hint="@string/Type_Of_Work"
                            android:textColorHint="#000000" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/volunteer_type_of_work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/volunteer_dob"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:cardBackgroundColor="#FFFFFF">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:elevation="50dp"
                        android:padding="12dp"

                        >

                        <EditText

                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/text_background"
                            android:gravity="center"
                            android:hint="@string/Date_Of_Birth"
                            android:textColorHint="#000000" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:id="@+id/volunteer_occupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/volunteer_type_of_work"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:cardBackgroundColor="#FFFFFF">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:elevation="50dp"
                        android:padding="12dp"

                        >

                        <EditText

                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/text_background"
                            android:gravity="center"
                            android:hint="@string/Occupation"
                            android:textColorHint="#000000" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/volunteer_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/volunteer_occupation"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    app:cardBackgroundColor="#FFFFFF">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:elevation="50dp"
                        android:padding="12dp"

                        >

                        <EditText

                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/text_background"
                            android:gravity="center"
                            android:hint="@string/Address"
                            android:textColorHint="#000000" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/volunteer_submit"
                    android:layout_width="220dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/volunteer_address"


                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="46dp"

                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="44dp"
                    android:layout_marginRight="95dp"
                    android:background="@drawable/text_input_bg"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textColorLink="#40CDC9"
                    android:textSize="25sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>